Various smaller changes (FindBugs)