@@ -17,7 +17,7 @@ public class Function implements Token {
 //## Java 1.5 begin ##
 
     // must be a new instance
-    private static final Long COUNT_STAR = new Long(0);
+    private static final Long COUNT_STAR = Long.valueOf(0);
 
     protected Object[] x;
     private String name;
